Cleaned up, License, and Travis

--- a/README
+++ b/README
@@ -1,3 +1,12 @@
 # SimpleScalaUtil
+====================
+
 A simple scala util
+
+[![Build Status](https://secure.travis-ci.org/JasonGiedymin/SimpleScalaUtil.png?branch=master)](http://travis-ci.org/JasonGiedymin/SimpleScalaUtil)
+
+## Utilities
+- Simple Memoization
+    * up to 4 args
+    * with hit counting via yammer metrics
 
